@@ -1,3 +1,12 @@
+2008-06-02  Tatsuya BIZENN  <bizenn@arthub.net>
+
+	* Change: src/kahua-spvr.scm, src/kahua-httpd.scm
+	  Drop work around that reset signal mask periodically to
+	  avoid the signal mask is changed unexpectedly on Mac OS X.
+	  This flaw is caused by the specification of
+	  sigsetjmp()/siglongjmp() on Mac OS X.  Now Gauche CVS HEAD
+	  (after 2008-06-01) avoid this sucked flaw by itself.
+
 2008-05-15  Tatsuya BIZENN  <bizenn@arthub.net>
 
 	* Change: src/kahua/config.scm.in
